--- a/w1/v1/pages/OpSec.mdx
+++ b/w1/v1/pages/OpSec.mdx
@@ -2,7 +2,7 @@
 
 ![](https://i.ibb.co/34gZ3m6/image.png)
 
-## Recommendation
+## ⚙️ Method
 
 import { Callout } from "nextra/components";
 
@@ -18,3 +18,19 @@ import { Callout } from "nextra/components";
 5. Your social media activity is used to make a profile of you , to find your weaknesses. Likes, follows, rt's , comments are all used to use that information against you.
 6. Social media apps are extremely intrusive, and continuously broadcast your information, this includes your geo location , device identifier information, internet activities, etc. Uninstall social media apps on your main device that has banking information, personal details etc, access the social media via the incognito feature of your device browser and log in via the website with your location off and better still using a VPN.
 
+## 🥷 Anonymity
+
+<Callout type="info" emoji="ℹ️">
+  Every website you visit tracks you. Ideally you should be a using a [paid
+  VPN](https://torrentfreak.com/best-vpn-anonymous-no-logging/), Since free ones
+  monitor your activities. THe following are some services that are actively
+  used and have been tested for safety.
+</Callout>
+
+1. [Proxyium](https://proxyium.com/) - Free online web [proxy service](https://www.fortinet.com/resources/cyberglossary/proxy-server)
+2. [CloudFlare Radar](https://radar.cloudflare.com/) - Scan any website for malicious activity
+3. [iplocation.net](https://tools.iplocation.net/ip-tools) - Investigate websites
+
+### 🔎 Case Study
+
+1. [Hamas.com](https://www.hamas.com/) - This website is setup by [WIX.com]
