--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -105,10 +105,11 @@ import { Callout } from "nextra/components";
   posting only those which I have personally read about.
 </Callout>
 
-| img                                                                            | Org                                                                | Description                                                      |
-| ------------------------------------------------------------------------------ | ------------------------------------------------------------------ | ---------------------------------------------------------------- |
-| [![](https://i.ibb.co/PYcssnT/image.png)](https://twitter.com/OpenBorders4Aid) | [OpenBorders4Aid](https://linktr.ee/openborders4aid)               | Activism to put political pressure to allow aid                  |
-| [![](https://i.ibb.co/1MjJhw2/image.png)](https://twitter.com/CareForGaza)     | [Direct Volunteer Help](https://www.paypal.com/paypalme/UsmanaliF) | Tweep directly aiding gaza with evidence posted on their account |
+| img                                                                            | Org                                                                | Description                                                                                                                                                                                                 |
+| ------------------------------------------------------------------------------ | ------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [![](https://i.ibb.co/PYcssnT/image.png)](https://twitter.com/OpenBorders4Aid) | [OpenBorders4Aid](https://linktr.ee/openborders4aid)               | Activism to put political pressure to allow aid                                                                                                                                                             |
+| [![](https://i.ibb.co/1MjJhw2/image.png)](https://twitter.com/CareForGaza)     | [Direct Volunteer Help](https://www.paypal.com/paypalme/UsmanaliF) | Tweep directly aiding gaza with evidence posted on their account                                                                                                                                            |
+| [![](https://i.ibb.co/7xfDRjK/image.png)](https://twitter.com/ampalestine)     | [🇺🇸Muslims for 🇵🇸](https://march4gaza.org/)                        | Take action, organized the largest march for peace - [March4Palestins](https://march4gaza.org/), [Details](https://x.com/YasirQadhi/status/1741020384986792179?s=20), They are also active in providing aid |
 
 ## 💻 Software
 
