--- a/w1/v1/pages/OpSec.mdx
+++ b/w1/v1/pages/OpSec.mdx
@@ -33,4 +33,4 @@ import { Callout } from "nextra/components";
 
 ### 🔎 Case Study
 
-1. [Hamas.com](https://www.hamas.com/) - This website is setup by [WIX.com]
+1. [Hamas.com](https://www.hamas.com/) - This website is setup by wix which is an 🇮🇱 company. You can see the [Website DNS Report](https://snips.sh/f/m14CSWr5_j). This website also has been registered first in 1999 and then in 2023. The website itself has staged videos, it is not advisable to visit the site using a paid vpn as mentioned above, or using the web proxy.
