--- a/w1/v1/pages/OpSec.mdx
+++ b/w1/v1/pages/OpSec.mdx
@@ -28,7 +28,7 @@ import { Callout } from "nextra/components";
 </Callout>
 
 1. [Proxyium](https://proxyium.com/) - Free online web [proxy service](https://www.fortinet.com/resources/cyberglossary/proxy-server)
-2. [CloudFlare Radar](https://radar.cloudflare.com/) - Scan any website for malicious activity
+2. [Virustotal.com](https://www.virustotal.com/) - Online website analyzer
 3. [iplocation.net](https://tools.iplocation.net/ip-tools) - Investigate websites
 
 ### 🔎 Case Study
