--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -13,11 +13,26 @@ import { SpeedInsights } from "@vercel/speed-insights/next";
 ## ⚰️ Current Genocide Stats
 
 <Callout type="info" emoji="ℹ️">
-  Stats as of `Thu Dec 28 07:58:53 UTC 2023` ,
-  [Source](https://x.com/EuroMedHR/status/1740035280000921609?s=20)
+  Stats as of `Wed Jan 10 15:15:06 UTC 2024` ,
+  [Source](https://x.com/EuroMedHR/status/1742910421659754845?s=20)
 </Callout>
 
-[![](https://i.ibb.co/GnbfXnZ/image.png)](https://x.com/EuroMedHR/status/1740035280000921609?s=20)
+[![](https://i.ibb.co/Cm5Jb5h/image.png)](https://x.com/EuroMedHR/status/1742910421659754845?s=20)
+
+import { Cards, Card } from "nextra/components";
+
+<Cards>
+  <Card
+    title="⚖️ Proceedings instituted by South Africa against the State of Israel on 29 December 2023"
+    href="https://www.icj-cij.org/case/192"
+    target="_blank"
+  />
+</Cards>
+
+<Callout type="error" emoji="️⚖️">
+  Take action now, Report Genocidal Events Anonymously - [OFFICIAL ICC
+  SUBMISSION LINK](https://otplink.icc-cpi.int/)
+</Callout>
 
 ## 🌐 Websites
 
