--- a/w1/testV1/pages/index.mdx
+++ b/w1/testV1/pages/index.mdx
@@ -1,5 +1,9 @@
 ![](https://i.ibb.co/3BQWK09/c2.jpg)
 
+import TradingViewWidget from "../components/TradingViewWidget";
+
+<TradingViewWidget />
+
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
 <img src="https://i.ibb.co/dgt1Xtg/r.jpg" width="200%"></img>
