--- a/w1/testV1/pages/index.mdx
+++ b/w1/testV1/pages/index.mdx
@@ -1,6 +1,6 @@
 ![](https://i.ibb.co/3BQWK09/c2.jpg)
 
-import TradingViewWidget from "../components/TradingViewWidget";
+import TradingViewWidget from "../components/Tase";
 
 <TradingViewWidget />
 
