--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -34,6 +34,13 @@ import { Cards, Card } from "nextra/components";
   SUBMISSION LINK](https://otplink.icc-cpi.int/)
 </Callout>
 
+## 📉 `TASE` isNOTreal Stock Exchange Stats
+
+
+import TradingViewWidget from "../components/Tase";
+
+<TradingViewWidget />
+
 ## 🌐 Websites
 
 import { Callout } from "nextra/components";
