--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -34,8 +34,13 @@ import { Cards, Card } from "nextra/components";
   SUBMISSION LINK](https://otplink.icc-cpi.int/)
 </Callout>
 
-## 📉 `TASE` isNOTreal Stock Exchange Stats
+### 🔎 Fact Checkers
 
+|                                      Img                                       |                         Org                          |                                                      Description                                                       |
+| :----------------------------------------------------------------------------: | :--------------------------------------------------: | :--------------------------------------------------------------------------------------------------------------------: |
+| [![](https://i.ibb.co/Rj7qR8X/image.png)](https://www.oct7factcheck.com/index) | [Oct7FactCheck](https://www.oct7factcheck.com/index) | Website dedicated to debunking the Oct7 massacre, [Affiliation](https://updates.techforpalestine.org/oct7-fact-check/) |
+
+## 📉 `TASE` isNOTreal Stock Exchange Stats
 
 import TradingViewWidget from "../components/Tase";
 
