--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -13,11 +13,11 @@ import { SpeedInsights } from "@vercel/speed-insights/next";
 ## ⚰️ Current Genocide Stats
 
 <Callout type="info" emoji="ℹ️">
-  Stats as of `Wed Jan 10 15:15:06 UTC 2024` ,
-  [Source](https://x.com/EuroMedHR/status/1742910421659754845?s=20)
+  Stats as of `Sat Jan 13 20:06:20 UTC 2024` ,
+  [Source](https://x.com/EuroMedHR/status/1746253558427607077)
 </Callout>
 
-[![](https://i.ibb.co/Cm5Jb5h/image.png)](https://x.com/EuroMedHR/status/1742910421659754845?s=20)
+[![](https://i.ibb.co/kQpNTTX/image.png)](https://x.com/EuroMedHR/status/1746253558427607077)
 
 import { Cards, Card } from "nextra/components";
 
